unreleased

* Enhancements

  * Allow choosing domain (API endpoint)

* Bug fixes

  * Actually send keys set with Carbon.key

2.2.1 / 2012-03-21

* Enhancements

  * Switched from EventMachine to pure Ruby threads, a small speed sacrifice that gains us compatibilty with MRI 1.8, MRI 1.9, and JRuby. Also works better in multithreaded environments - no accidentally turning off somebody's EventMachine reactor :)

2.2.0 / 2012-03-20

* Enhancements

  * Carbon.query(os) now returns a Hash keyed by the "os", instead of just a carefully ordered Array.

* Breaking changes

  * Carbon.query(os) has a different return value!

2.1.0 / 2012-03-14

* Enhancements

  * Simplified API down to just Carbon.query. It has three method signatures.
  * Simplified EventMachine reactor
  * Limited concurrency to 16 connections at a time

* Breaking changes

  * Simplified API down to just Carbon.query :)

2.0.3 / 2012-03-13

* Enhancements

  * Automatically skip redundant queries and cache things for an hour (in-process, unless you set up CacheMethod.config.storage = $memcached or something)

2.0.2 / 2012-03-13

* Bug fixes

  * Don't hang up on Carbon.multi if 0 queries are passed

2.0.1 / 2012-03-12

* Bug fixes

  * Don't send blank (incl. nil) characteristics

* Documentation changes

  * Recommend people use Object#try when passing a block to #provide

2.0.0 / 2012-03-09

* Breaking changes

  * #emission_estimate has been removed in favor of #impact
  * Response structure now mirrors what you get from http://impact.brighterplanet.com

* Enhancements

  * Carbon.multi method for parallelizing requests
  * Tested with MRI 1.8 and MRI 1.9